internal/kgateway/translator/gateway/testutils/outputs/traffic-policy/label_based.yaml
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        accessLog:
        - filter:
            headerFilter:
              header:
                name: x-my-cool-test-filter
                stringMatch:
                  exact: test
          name: envoy.access_loggers.http_grpc
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
            commonConfig:
              grpcService:
                envoyGrpc:
                  clusterName: kube_infra_log-test_50051
              logName: test-accesslog-service
              transportApiVersion: V3
        httpFilters:
        - name: ratelimit/local
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            statPrefix: http_local_rate_limiter
        - name: transformation
          typedConfig:
            '@type': type.googleapis.com/envoy.api.v2.filter.http.FilterTransformations
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: http
        statPrefix: http
        useRemoteAddress: true
    name: http
  name: http
Routes:
- ignorePortInHostMatching: true
  name: http
  virtualHosts:
  - domains:
    - example.com
    name: http~example_com
    routes:
    - match:
        prefix: /
      name: http~example_com-route-0-httproute-example-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ratelimit/local:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          filterEnabled:
            defaultValue:
              numerator: 100
            runtimeKey: local_rate_limit_enabled
          filterEnforced:
            defaultValue:
              numerator: 100
            runtimeKey: local_rate_limit_enforced
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 33s
            maxTokens: 99
            tokensPerFill: 1
        transformation:
          '@type': type.googleapis.com/envoy.api.v2.filter.http.RouteTransformations
          transformations:
          - requestMatch:
              responseTransformation:
                transformationTemplate:
                  headersToAppend:
                  - key: abc
                    value:
                      text: custom-value-abc
                  parseBodyBehavior: DontParse
                  passthrough: {}
